update .gitignore to ignore IntelliJ IDEA generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ignore package-lock.json
+package-lock.json
+
+# ignore IntelliJ IDEA generated files
+.idea/
+
 # ignore node/grunt dependency directories
 node_modules/
 
