--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "kalendar-vue": "^0.2.5",
     "vue": "^2.5.2"
   },
   "devDependencies": {
