--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password = Cb6af04c91822cb*
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.show-sql = true
+
 # Hibernate ddl auto (create, create-drop, validate, update)
 # Keep the value to 'validate' for production
-# spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
