implement some Services and modify the Controllers, Entities and DTOs

--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.password = Cb6af04c91822cb*
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 # Keep the value to 'validate' for production
 spring.jpa.hibernate.ddl-auto = update
+
+spring.jackson.serialization.fail-on-empty-beans = false
