--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-component-router": "^0.1.12",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -44,7 +47,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
