--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port = 8888
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://142.93.173.131:3306/d8games?useSSL=false
 spring.datasource.username = dev
