--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-component-router": "^0.1.12",
     "vue-router": "^3.0.1"
   },
