develop the functionality of the voucher system along with the auto-punishment system

--- a/services/src/main/resources/config.properties
+++ b/services/src/main/resources/config.properties
@@ -1,7 +1,15 @@
-officeIp=95.8.201.4
+officeIp=78.186.178.177
 
-locationOffice=OFFICE
-locationHome=HOME
+voucherLocationOffice=OFFICE
+voucherLocationHome=HOME
+
+voucherTypeIn=IN
+voucherTypeOut=OUT
+
+nightHoursStart=23
+nightHoursEnd=08
+
+voucherNoOutPunishment=3
 
 contactDepartmentName=Board of Directors
 
