--- a/services/pom.xml
+++ b/services/pom.xml
@@ -55,6 +55,11 @@
 			<version>1.18.4</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
