implement the calculation of the hours worked and show the data in the employee summary section

--- a/services/src/main/resources/config.properties
+++ b/services/src/main/resources/config.properties
@@ -11,7 +11,7 @@ nightHoursEnd=08
 
 voucherNoOutPunishment=3
 
-contactDepartmentName=Board of Directors
+contactDepartmentName=Corporate
 
 countryCode=+90
 
