--- a/authenticator/android/app/src/main/AndroidManifest.xml
+++ b/authenticator/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.bar.qrscanner">
 
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
     <application
         android:allowBackup="true"
