--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "add": "^2.0.6",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "firebase": "^5.5.8",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-component-router": "^0.1.12",
@@ -20,6 +21,7 @@
     "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
+    "vuefire": "^2.0.0-alpha.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
