--- a/services/pom.xml
+++ b/services/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.d8games.web</groupId>
 	<artifactId>services</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1-alpha</version>
 	<packaging>jar</packaging>
 
 	<name>services</name>
@@ -67,6 +67,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
