--- a/services/pom.xml
+++ b/services/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.d8games.web</groupId>
 	<artifactId>services</artifactId>
-	<version>0.1-alpha</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>services</name>
