implement the logic of password-based authentication in backend

--- a/services/src/main/resources/config.properties
+++ b/services/src/main/resources/config.properties
@@ -21,3 +21,6 @@ voucherNoOutPunishment=3
 contactDepartmentName=Corporate
 
 countryCode=+90
+
+gmailUsername=bot.d8games@gmail.com
+gmailPassword=FcVtt55yy
