make rating fields config depend on poll name

--- a/web/src/assets/ratingFieldsConfig.json
+++ b/web/src/assets/ratingFieldsConfig.json
@@ -1,18 +1,20 @@
-[
-  {
-    "type": "Main",
-    "value": null
-  },
-  {
-    "type": "NPC",
-    "value": null
-  },
-  {
-    "type": "Villain",
-    "value": null
-  },
-  {
-    "type": "Skin",
-    "value": null
-  }
-]
+{
+  "jelly": [
+    {
+      "type": "Main",
+      "value": null
+    },
+    {
+      "type": "NPC",
+      "value": null
+    },
+    {
+      "type": "Villain",
+      "value": null
+    },
+    {
+      "type": "Skin",
+      "value": null
+    }
+  ]
+}
