hide the protected fields in application.properties and config.properties

--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port = 8888
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://142.93.173.131:3306/d8games?useSSL=false
-spring.datasource.username = dev
-spring.datasource.password = Cb6af04c91822cb*
+spring.datasource.username = <hidden>
+spring.datasource.password = <hidden>
 
 
 ## Hibernate Properties
