--- a/services/src/main/resources/config.properties
+++ b/services/src/main/resources/config.properties
@@ -23,4 +23,4 @@ contactDepartmentName=Corporate
 countryCode=+90
 
 gmailUsername=bot.d8games@gmail.com
-gmailPassword=FcVtt55yy
+gmailPassword=<hidden>
