fix the time zone issue

--- a/services/src/main/resources/config.properties
+++ b/services/src/main/resources/config.properties
@@ -8,6 +8,8 @@ voucherLocationHome=HOME
 voucherTypeIn=IN
 voucherTypeOut=OUT
 
+currentTimeZone=Asia/Istanbul
+
 nightHoursStart=23:00
 nightHoursEnd=08:00
 
